Add index initial to collections table. Style notifications messages.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,6 +89,7 @@ body::-webkit-scrollbar {
 // button#menu-button:active {
 //     border-style: none !important;
 // }
+
 // Footer - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 
 footer {
@@ -108,6 +109,68 @@ footer {
             padding-left: 10px;
         }
     }
+}
+
+// Notifications  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
+
+.uk-notification-close {
+    top: unset;
+    bottom: 13px;
+    right: 10px;
+}
+
+a.uk-notification-close {
+    svg {
+        width: 12px;
+        height: 12px;
+
+        line {
+            stroke-width: 1.4;
+        }
+    }
+}
+
+.uk-notification-message {
+    background: #cdcdcde0;
+    color: #666;
+    font-size: 14px;
+    border-radius: 5px;
+    padding: 10px 26px 10px 10px;
+
+    .g {
+        color: #49AB8A;
+    }
+
+    .b {
+        color: #e9806e;
+    }
+
+    .d {
+        font-style: italic;
+        font-weight: 300;
+    }
+
+    .c {
+        color: #666;
+        display: inline-flex;
+        text-decoration: underline;
+
+        // BADGE LIKE:
+        // display: inline-flex;
+        // color: #f3f3f3;
+        // background: #999;
+        // border-radius: 3px;
+        // margin-left: 2px;
+        // padding: 0px 5px;
+    }
+}
+
+.uk-notification-message .c:hover {
+    color: #999;
+    // BADGE LIKE:
+    // background: #666;
+    // color: #f3f3f3;
+    // text-decoration: none;
 }
 
 // Main Menu- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
@@ -493,7 +556,7 @@ a.menu-button:hover {
 }
 
 .scroll-up-button {
-    background: rgba(0, 0, 0, .07);
+    background: rgba(0, 0, 0, 0.07);
     box-sizing: border-box;
     border-radius: 5px 0px 0px 5px;
     width: 40px;
@@ -1006,7 +1069,7 @@ p.header {
     margin: 15px 0px;
 }
 
-td.arrow-left a, td.arrow-right a  {
+td.arrow-left a, td.arrow-right a {
     transition: all 0.15s ease-out;
 }
 
