--- a/app/views/collections/remove_game_search.js.erb
+++ b/app/views/collections/remove_game_search.js.erb
@@ -1,7 +1,7 @@
 var form = '<%= @collection.form %>';
 
 UIkit.notification({
-    message: '<%= @message %>',
+    message: $('<div/>').html('<%= @message %>').text(),
     status: 'warning',
     pos: 'top-right',
     timeout: 5000
