--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,37 +58,13 @@ body::-webkit-scrollbar {
     padding-bottom: $footer_height + $navbar_height;
 }
 
+// Image (Cover) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -//
+
+img[data-src][src*='data:image'] { background: $accent; }
+// img[data-src] { background: $accent; }
+
 // Logo - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
-#logo svg {
-    width: 70px;
-    height: 110px;
-}
 
-#logo svg path {
-    stroke: #999;
-    stroke-width: 2px;
-}
-
-#logo:hover svg path {
-    stroke: #accent_darker;
-}
-
-// button#menu-button {
-//     border-radius: 500px;
-//     width: 115px;
-//     box-shadow: -2px 4px 9px 1px rgba(0, 0, 0, 0.16);
-//     cursor: pointer;
-//     background: #444444f7;
-//     border: none;
-// }
-
-// button#menu-button:focus {
-//     outline: none !important;
-// }
-
-// button#menu-button:active {
-//     border-style: none !important;
-// }
 
 // Footer - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 
@@ -621,29 +597,29 @@ a.menu-button:hover {
 .game-cover {
     margin-bottom: 0px !important;
     border-radius: 3px;
-    box-shadow: -2px 4px 9px 1px #0000004a;
+    // box-shadow: -2px 4px 9px 1px #0000004a;
 }
 
 .game-cover-effect {
     position: relative;
-    transition-duration: 0.3s;
+    // transition-duration: 0.3s;
 }
 
 .game-cover-effect:hover {
-    transform: rotate(10deg);
+    // transform: rotate(10deg);
     cursor: pointer;
 }
 
-.game-cover-effect::after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 90px;
-    border-radius: 3px;
-    top: 0;
-    left: 0;
-    background: linear-gradient(to left top, rgba(75, 235, 236, 0) 50%, rgba(255, 255, 255, 0.15) 80%, rgba(255, 255, 255, 0.28) 100%);
-}
+// .game-cover-effect::after {
+//     position: absolute;
+//     content: "";
+//     width: 100%;
+//     height: 90px;
+//     border-radius: 3px;
+//     top: 0;
+//     left: 0;
+//     background: linear-gradient(to left top, rgba(75, 235, 236, 0) 50%, rgba(255, 255, 255, 0.15) 80%, rgba(255, 255, 255, 0.28) 100%);
+// }
 
 .no-cover {
     width: 200px;
@@ -1094,15 +1070,17 @@ td.arrow-right a:active {
     background: #444444f7;
     padding: 5px;
     border-radius: 3px;
-    transition: all 0.15s ease-out;
+    transition: position 0.15s ease-out;
 }
 
 .uk-iconnav a:active {
+    border-radius: 0px 0px 3px 3px;
     position: relative;
     top: 5px;
 }
 
 .uk-iconnav a.uk-open {
+    border-radius: 0px 0px 3px 3px;
     position: relative;
     top: 5px;
 }
@@ -1111,17 +1089,23 @@ td.arrow-right a:active {
     background: #444444f7;
     padding: 5px;
     border-radius: 3px;
-    transition: all 0.15s ease-out;
+    transition: position 0.15s ease-out;
 }
 
 .uk-iconnav button:active {
+    border-radius: 0px 0px 3px 3px;
     background: #444444f7;
     position: relative;
     top: 5px;
 }
 
 .uk-iconnav li {
-    padding-left: 8px;
+    padding-left: 0px !important;
+    margin-left: 8px;
+    background: #656565;
+    height: 30px;
+    width: 30px;
+    border-radius: 3px;
 }
 
 #info-links {
@@ -1190,6 +1174,7 @@ hr.nav-bottom {
     box-shadow: -4px 5px 9px 0px #0000004a, inset 0px 0px 20px 0px #00000059;
     padding: 15px;
     font-size: 14px;
+    font-weight: lighter;
     width: 230px;
     color: rgba(255, 255, 255, 0.5);
 }
@@ -1209,6 +1194,7 @@ hr.nav-bottom {
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 5px;
     font-size: 13px;
+    font-weight: lighter;
     color: rgba(255, 255, 255, 0.5);
     padding: 2px 8px;
     cursor: pointer;
@@ -1258,6 +1244,7 @@ button.uk-dropdown-close.uk-close.uk-icon {
 .platform-icon + span, .platform-green + span {
     position: relative;
     top: 11px;
+    left: 5px;
 }
 
 .collection-icon svg rect {
@@ -1273,6 +1260,7 @@ button.uk-dropdown-close.uk-close.uk-icon {
 .collection-icon + span, .collection-green + span {
     position: relative;
     top: 11px;
+    left: 5px;
 }
 
 .add-form-close {
@@ -1307,6 +1295,7 @@ button.uk-dropdown-close.uk-close.uk-icon {
 
 .physical + svg, .digital + svg {
     cursor: pointer;
+    margin-right: 7px
 }
 
 .physical + svg path {
@@ -1353,10 +1342,10 @@ button.uk-dropdown-close.uk-close.uk-icon {
     border-radius: 1px;
 }
 
-.remove:hover + .underlight {
-    background: $accent;
-    border-color: $accent;
-}
+// .remove:hover + .underlight {
+//     background: $accent;
+//     border-color: $accent;
+// }
 
 span.add-form-errors {
     height: 25px;
