--- a/app/views/static_pages/_cover.html.erb
+++ b/app/views/static_pages/_cover.html.erb
@@ -1,6 +1,12 @@
 <div class="game-cover-effect" uk-toggle="target: #i-<%= game['id'] %>">
-<%= image_tag(cover_url, alt: game["name"], class: "game-cover",
-       draggable: "false", width: options[:width]) %>
+
+
+
+<img data-src="<%= cover_url %>" alt="<%= game["name"] %>" width="<%= width %>" height="<%= height %>" draggable="false" uk-img>
+
+
+
+
 
 <% if game["xtra"] %>
   <div class="xtra-info" uk-alert>
@@ -8,6 +14,9 @@
     <p><%= game["xtra"] %></p>
   </div>
 <% end %>
+
 </div>
 
 <%= render partial: "game_info", locals: { game: game, cover_url: cover_url, options: options } %>
+
+
