--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
   <ul>
-    <li><%= link_to "?", root_path, class: "about-link" %></li>
+    <li><%= link_to "?", about_url, class: "about-link" %></li>
     <li><%= link_to "TERMS", root_path, class: "about-link" %></li>
     <li><%= link_to "PRIVACY", root_path, class: "about-link" %></li>
   </ul>
