now it works again (no game info, no xtras)

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <ul>
     <li><%= link_to "?", about_url, class: "about-link" %></li>
-    <li><%= link_to "TERMS", root_path, class: "about-link" %></li>
-    <li><%= link_to "PRIVACY", root_path, class: "about-link" %></li>
+    <li><%= link_to "TERMS", terms_url, class: "about-link" %></li>
+    <li><%= link_to "PRIVACY", privacy_url, class: "about-link" %></li>
   </ul>
 </footer>
