Still works with styling

--- a/app/views/static_pages/_no_cover.html.erb
+++ b/app/views/static_pages/_no_cover.html.erb
@@ -1,3 +1,4 @@
 <div class="no-cover" uk-toggle="target: #i-<%= game['id'] %>">
+  <p class="no-cover-tag unselectable"><%= game["name"] %></p>
 </div>
 
