--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,7 +60,10 @@ body::-webkit-scrollbar {
 
 // Image (Cover) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -//
 
-img[data-src][src*='data:image'] { background: $accent; }
+img[data-src][src*='data:image'] {
+    background: $accent;
+    border-radius: 3px;
+}
 
 
 // Logo - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
@@ -597,29 +600,29 @@ a.menu-button:hover {
 .game-cover {
     margin-bottom: 0px !important;
     border-radius: 3px;
-    // box-shadow: -2px 4px 9px 1px #0000004a;
+    box-shadow: -2px 4px 9px 1px #0000004a;
 }
 
 .game-cover-effect {
     position: relative;
-    // transition-duration: 0.3s;
+    transition-duration: 0.3s;
 }
 
 .game-cover-effect:hover {
-    // transform: rotate(10deg);
+    transform: rotate(10deg);
     cursor: pointer;
 }
 
-// .game-cover-effect::after {
-//     position: absolute;
-//     content: "";
-//     width: 100%;
-//     height: 90px;
-//     border-radius: 3px;
-//     top: 0;
-//     left: 0;
-//     background: linear-gradient(to left top, rgba(75, 235, 236, 0) 50%, rgba(255, 255, 255, 0.15) 80%, rgba(255, 255, 255, 0.28) 100%);
-// }
+.game-cover-effect::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 90px;
+    border-radius: 3px;
+    top: 0;
+    left: 0;
+    background: linear-gradient(to left top, rgba(75, 235, 236, 0) 50%, rgba(255, 255, 255, 0.15) 80%, rgba(255, 255, 255, 0.28) 100%);
+}
 
 .no-cover {
     width: 200px;
