--- a/app/views/static_pages/_cover.html.erb
+++ b/app/views/static_pages/_cover.html.erb
@@ -1,6 +1,6 @@
 
 <div class="game-cover-effect" uk-toggle="target: #i-<%= game['id'] %>">
-<img data-src="<%= cover_url %>" alt="<%= game["name"] %>" width="<%= width %>" height="<%= height %>" draggable="false" uk-img>
+<img data-src="<%= cover_url %>" alt="<%= game["name"] %>" width="<%= width %>" height="<%= height %>" draggable="false" class="game-cover" uk-img>
 </div>
 
 
