--- a/app/views/static_pages/_results.html.erb
+++ b/app/views/static_pages/_results.html.erb
@@ -12,24 +12,20 @@
 </div>
 <% else %>
 <% if status = @inquiry.status_id == 2 %>
-<div uk-scrollspy="cls: uk-animation-shake; repeat: true">
+<div>
   <p>I can't show you more, try to be more precise.</p>
 </div>
 <% end %>
 <% end %>
 <% else %>
-<!-- New partial here no results -->
 <p>0 results for "<%= @inquiry.query %>"</p>
-<!-- Give nicer better explanation maybe with buttons and links -->
 <p>Try using "*" for searching (example: *shadd* > El Shaddai: Ascension of the Metatron)</p>
 <% end %>
-
 <div class="scroll-up">
   <a class="scroll-up-button" href="#target"
     uk-icon="icon: arrow-up; ratio: 1.5"
     uk-scroll="duration: 600" style="display: none"></a>
 </div>
-
 <script>
 // Show scroll-up-button
 $(window).scroll(function() {
