--- a/app/views/static_pages/_game_info.html.erb
+++ b/app/views/static_pages/_game_info.html.erb
@@ -29,6 +29,178 @@
             <% end %>
         </p>
         <% end %>
+                <!-- CHECK USERS COLLECTIONS -->
+        <% in_initial = {} %>
+        <% @initial_collections.each_value do |collection| %>
+        <% in_initial["#{collection.form}"] = collection.games.find_by(igdb_id: game['id']) ? true : false %>
+        <% end %>
+        <% in_custom = @custom_collections.any? do |custom_c| %>
+        <% custom_c.games.find_by(igdb_id: game['id']) %>
+        <% end %>
+        <!-- NAVIGATION -->
+        <div class="info-nav">
+            <ul class="uk-iconnav">
+                <!-- COLLECTION -->
+                <li>
+                    <% collection = @initial_collections['collection'] %>
+                    <% tooltip = 'Add to / Remove from ' + (collection.custom_name || collection.name) %>
+                    <% extra_class = in_initial['collection'] ? 'remove' : '' %>
+                    <%= content_tag(:a, '',id: "add-collection-#{ game['id'] }", class: "uk-icon-link " + extra_class,
+                    'uk-icon' => 'database', 'uk-tooltip' => "title: #{tooltip}; pos: top-left") %>
+                    <div class="underlight"></div>
+                </li>
+                <!-- WISHLIST -->
+                <!-- ___ADD -->
+                <% collection = @initial_collections['wishlist'] %>
+                <%= content_tag(:li, id: "add-wishlist-form-" + game['id'].to_s,  style: in_initial['wishlist'] ? 'display: none;' : nil) do %>
+                <%= render partial: "add_form_no_platform",
+                locals: { game: game, collection: collection, icon: 'star' } %>
+                <% end %>
+                <!-- ___REMOVE -->
+                <%= content_tag(:li, id: "remove-wishlist-form-" + game['id'].to_s,  style: !in_initial['wishlist'] ? 'display: none;' : nil) do %>
+                <% tooltip = 'Remove from ' + (collection.custom_name || collection.name) %>
+                <%= link_to '', remove_s_url(game_id: game['id'], collection_id: collection.id, id_type: 'igdb'),
+                class: 'uk-icon-link remove', method: :delete, remote: true, 'uk-icon' => 'star', 'uk-tooltip' => "title: #{tooltip}; pos: top-left" %>
+                <div class="underlight"></div>
+                <% end %>
+                <!-- PLAYED -->
+                <!-- ___ADD -->
+                <% collection = @initial_collections['played'] %>
+                <%= content_tag(:li, id: "add-played-form-" + game['id'].to_s,
+                style: in_initial['played'] ? 'display: none;' : nil) do %>
+                <%= render partial: "add_form_no_platform",
+                locals: { game: game, collection: collection, icon: 'bell' } %>
+                <% end %>
+                <!-- ___REMOVE -->
+                <%= content_tag(:li, id: "remove-played-form-" + game['id'].to_s, style: !in_initial['played'] ? 'display: none;' : nil) do %>
+                <% tooltip = 'Remove from ' + (collection.custom_name || collection.name) %>
+                <%= link_to '', remove_s_url(game_id: game['id'], collection_id: collection.id, id_type: 'igdb'),
+                class: 'uk-icon-link remove', method: :delete, remote: true, 'uk-icon' => 'bell', 'uk-tooltip' => "title: #{tooltip}; pos: top-left" %>
+                <div class="underlight"></div>
+                <% end %>
+                <!-- CUSTOM -->
+                <li>
+                    <% tooltip = 'Add to / Remove from Custom Collections' %>
+                    <% extra_class = in_custom ? 'remove' : '' %>
+                    <%= content_tag(:a, '',id: "add-custom-#{ game['id'] }", class: "uk-icon-link " + extra_class,
+                    'uk-icon' => 'cog', 'uk-tooltip' => "title: #{tooltip}; pos: top-left") %>
+                    <div class="underlight"></div>
+                </li>
+            </ul>
+        </div>
+        <!-- ADD GAME TO COLLECTION -->
+        <div class="b-<%= game['id'] %>">
+            <div id="add-collection-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-collection-<%= game['id'] %>; mode: click; pos: bottom-left; delay-hide: 100; boundary-align: true; boundary: .b-<%= game['id'] %>" >
+                <button class="uk-dropdown-close add-form-close" type="button" uk-close></button>
+                <%= form_for(:game, url: games_path, remote: true) do |f| %>
+                <% collection = @initial_collections['collection'] %>
+                <%= hidden_field_tag :collection, collection.id %>
+                <%= f.hidden_field :needs_platform, value: true %>
+                <%= f.hidden_field :name, value: game['name'] %>
+                <%= f.hidden_field :igdb_id, value: game['id'] %>
+                <% scalp_platforms(game).each do |pid| %>
+                <%= f.hidden_field :platforms, value: pid, multiple: true %>
+                <% end %>
+                <div class="select-platform">
+                    <div uk-form-custom="target: > * > span:last-child">
+                        <% if game['platforms'].size > 1 %>
+                        <%= f.select(:platform, platforms_for_select(game), prompt: 'Select platform') %>
+                        <span class='bigs'>
+                            <span class="platform-icon"><%= render 'svgs/platform_icon' %></span>
+                            <span></span>
+                        </span>
+                        <% else %>
+                        <%= f.select(:platform, platforms_for_select(game)) %>
+                        <span class='bigs'>
+                            <span class="platform-green"><%= render 'svgs/platform_icon' %></span>
+                            <span></span>
+                        </span>
+                        <% end %>
+                    </div>
+                </div>
+                <div class="uk-margin uk-grid-small uk-child-width-1-2 uk-grid">
+                    <label><%= f.radio_button(:physical, true, checked: true, class: "physical") %><%= render 'svgs/gamebox_icon' %> Physical</label>
+                    <label><%= f.radio_button(:physical, false, class: "digital") %><%= render 'svgs/digital_icon' %> Digital</label>
+                </div>
+                <button name="button" type="submit" class="add-button">Add</button><span class="add-form-errors"></span>
+                <% end %>
+                <!-- ALREADY IN -->
+                <div class="already-in">
+                    <%= render(partial: 'already_in_collection', locals: { collection: collection, game_name: game['name'], igdb_id: game['id'] }) if in_initial['collection']  %>
+                </div>
+            </div>
+            <!-- ADD TO CUSTOM COLLECTION -->
+            <div id="add-custom-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-custom-<%= game['id'] %>; mode: click; pos: bottom-left; delay-hide: 100; boundary-align: true; boundary: .b-<%= game['id'] %>">
+                <button class="uk-dropdown-close add-form-close" type="button" uk-close></button>
+                <% if @custom_collections.any? %>
+                <%= form_for(:game, url: games_path, remote: true) do |f| %>
+                <%= hidden_field_tag :form, 'custom' %>
+                <!-- GAME -->
+                <%= f.hidden_field :name, value: game['name'] %>
+                <%= f.hidden_field :igdb_id, value: game['id'] %>
+                <% scalp_platforms(game).each do |pid| %>
+                <%= f.hidden_field :platforms, value: pid, multiple: true %>
+                <% end %>
+                <!-- SELECT COLLECTION -->
+                <div class="select-collection">
+                    <% if @custom_collections.size > 1 %>
+                    <div uk-form-custom="target: > * > span:last-child">
+                        <%= select_tag(:collection, options_for_select(collections_for_select(current_user)), prompt: 'Select custom collection') %>
+                        <span class="bigs">
+                            <span class="collection-icon"><%= render 'svgs/shelf_icon' %></span>
+                            <span></span>
+                        </span>
+                    </div>
+                    <% else %>
+                    <div uk-form-custom="target: > * > span:last-child">
+                        <%= select_tag(:collection, options_for_select(collections_for_select(current_user))) %>
+                        <span class="bigs">
+                            <span class="collection-green"><%= render 'svgs/shelf_icon' %></span>
+                            <span></span>
+                        </span>
+                    </div>
+                    <% end %>
+                </div>
+                <!-- DEPENDS ON COLLECTION -->
+                <div id="platform-option" style="display: none">
+                    <%= f.hidden_field :needs_platform, value: false %>
+                    <div class="uk-margin select-platform">
+                        <div uk-form-custom="target: > * > span:last-child">
+                            <% if game['platforms'].size > 1 %>
+                            <%= f.select(:platform, platforms_for_select(game), prompt: 'Select platform') %>
+                            <span class='bigs'>
+                                <span class="platform-icon"><%= render 'svgs/platform_icon' %></span>
+                                <span></span>
+                            </span>
+                            <% else %>
+                            <%= f.select(:platform, platforms_for_select(game)) %>
+                            <span class='bigs'>
+                                <span class="platform-green"><%= render 'svgs/platform_icon' %></span>
+                                <span></span>
+                            </span>
+                            <% end %>
+                        </div>
+                    </div>
+                    <div class="uk-margin uk-grid-small uk-child-width-1-2 uk-grid">
+                        <label><%= f.radio_button(:physical, true, checked: true, class: "physical") %><%= render 'svgs/gamebox_icon' %> Physical</label>
+                        <label><%= f.radio_button(:physical, false, class: "digital") %><%= render 'svgs/digital_icon' %> Digital</label>
+                    </div>
+                </div>
+                <button name="button" type="submit" class="add-button">Add</button><span class="add-form-errors"></span>
+                <% end %>
+                <!-- ALREADY IN -->
+                <div class="already-in">
+                    <%= render(partial: 'already_in_custom', locals: { game_name: game['name'], igdb_id: game['id'] }) if in_custom %>
+                </div>
+                <% else %>
+                <p>Create custom collection first.</p>
+                <% end %>
+            </div>
+        </div>
+
+
+
+
         <!-- SUMMARY -->
         <% if summary = get_summary(game, 280, 50) %>
         <p id="info-summary"><%= summary[:start] %><% if summary[:end] %><span class="dots" id="dots-<%= game['id'] %>"><%= summary[:span] %><button class="uk-icon-link uk-icon ms-b-down" onclick="myFunction(<%= game['id'] %>)" uk-icon="icon: triangle-down"></button></span> <span id="more-<%= game['id'] %>" class="more"><%= summary[:end] %><button class="uk-icon-link uk-icon ms-b-up" onclick="myFunction(<%= game['id'] %>)" uk-icon="icon: triangle-up"></button></span>
